@@ -20,8 +20,6 @@ foreach my $db_type (qw(mysql pg informix sqlite oracle))
     }
   }
 
-  next  unless(have_db($db_type));
-
   Rose::DB->default_type($db_type);
 
   my $db = Rose::DB->new;
