@@ -2,6 +2,7 @@
 
     * Added new_or_cached() method and associated caching framework.
       XXX: needs docs and tests
+    * Added dbi_connect() method. XXX: needs docs
     * Removed mistakenly checked in breakpoint.
 
 0.735 (07.21.2007) - John Siracusa <siracusa@gmail.com>
